# BrowserOS

./: .gitattributes  .gitignore  README.md  build.sh  sign_and_package_app.sh
docs/: BUILD.md  CNAME  appcast-x86_64.xml  appcast.xml
files/ai_agent_side_panel/: BUILD.gn  background.iife.js  manifest.json
files/ai_agent_side_panel/_locales/en/: messages.json
files/ai_agent_side_panel/content/: index.iife.js
files/ai_agent_side_panel/options/: index.html
files/ai_agent_side_panel/options/assets/: index-4hxP9hKT.js  index-IRi2qSG8.js  index-UqCCP5ht.css
files/ai_agent_side_panel/side-panel/: index.html
files/ai_agent_side_panel/side-panel/assets/: index-B_9MwmOl.css  index-DSa3grvl.js
files/ai_side_panel/: BUILD.gn  Readability.js  background.js  buildDomTree.js  content.js  manifest.json  options.html  options.js  sidepanel.html  sidepanel.js
files/ai_side_panel/styles/: chat.css  globals.css
patches/: _common.py  patches.py  series
patches/nxtscape/: New-BrowserOS-settings-AI-page-for-providers.patch  UI-updating-About-string.patch  add-importer-supporter-for-chrome.patch  add-sparkle-info-plist-keys.patch  adding-new-vector-icons.patch  ai-agent-extension.patch  ai-agent-side-panel.patch  ai-chat-extension.patch  branding.patch  browseros-api-updates-1.patch  browseros-api-updates-2.patch  browseros-settings.patch  clash-of-gpts.patch  disable-chrome-labs-pinning.patch  disable-google-key-info-bar.patch  disable-info-bar-in-cdp.patch  disable-user-gesture-restriction-on-sidepanel.patch  embed-third-party-llm-in-side-panel.patch  first-run-nxtscape-2.patch  first-run-nxtscape.patch  new-snapshot-API.patch  new_branding.patch  nxtscape-settings-ui.patch  nxtscape-updater-sparkle.patch  pin-nxtscape-agents-together.patch  pin-nxtscape-ai-agent.patch  pin-nxtscape-ai-chat.patch  pin-nxtscape-extensions-by-default.patch  pin-views-old-profiles-fix.patch  series  update-color-pinned-views.patch
resources/branding/: BRANDING.dev  BRANDING.release
resources/files/ai_side_panel/: background.js  content.js  manifest.json  sidepanel.js
resources/files/bug_reporter/: background.js
resources/icons/linux/: product_logo_32.xpm
resources/icons/mac/: app.icns  document.icns
scripts/: flags.macos.debug.gn  flags.macos.gn  flags.macos.release.gn  patches.py
