is_debug=true
is_component_build=true
symbol_level=0
is_clang=true
chrome_pgo_phase = 0
is_official_build=false


# build_with_tflite_lib=false
# chrome_pgo_phase=0
# clang_use_chrome_plugins=false
# disable_fieldtrial_testing_config=true
# enable_hangout_services_extension=false
# enable_mdns=false
# enable_nacl=false
enable_reading_list=false
# enable_remoting=false
enable_reporting=false
enable_service_discovery=false
enable_widevine=true
# exclude_unwind_tables=true
# treat_warnings_as_errors=false

google_api_key=""
google_default_client_id=""
google_default_client_secret=""
# safe_browsing_mode=0 # Nithin -- this causes some clang error.
use_official_google_api_keys=false
use_unofficial_version_number=false
enable_updater=false
blink_symbol_level=0

# enable_iterator_debugging=false
# enable_mse_mpeg2ts_stream_parser=true
# enable_rust=true
enable_swiftshader=true
# fatal_linker_warnings=false
ffmpeg_branding="Chrome"

# proprietary_codecs=true
# use_sysroot=false
