is_debug=false
is_component_build=false
is_official_build=true
symbol_level=0
chrome_pgo_phase=0
enable_rust=true

# Critical build fixes
clang_use_chrome_plugins=false
fatal_linker_warnings=false

enable_reading_list=false
enable_reporting=false
enable_mse_mpeg2ts_stream_parser=true

enable_widevine=true
google_api_key=""
google_default_client_id=""
google_default_client_secret=""
use_official_google_api_keys=false
use_unofficial_version_number=false
enable_updater=false
blink_symbol_level=0
enable_swiftshader=true
ffmpeg_branding="Chrome"
proprietary_codecs=true
enable_platform_hevc = true
