is_official_build=true
is_debug=false
is_clang=true
symbol_level=1
chrome_pgo_phase=0
enable_rust=true
use_sysroot=false

# Critical build fixes
clang_use_chrome_plugins=false
fatal_linker_warnings=false
treat_warnings_as_errors=false

# Performance optimizations
enable_iterator_debugging=false
exclude_unwind_tables=true

# Disable Google services and telemetry
safe_browsing_mode=0
disable_fieldtrial_testing_config=true
google_api_key=""
google_default_client_id=""
google_default_client_secret=""
use_official_google_api_keys=false
use_unofficial_version_number=false

# Disable unwanted features
enable_hangout_services_extension=false
enable_mdns=false
enable_nacl=false
enable_reading_list=false
enable_remoting=false
enable_reporting=false
enable_service_discovery=false
enable_updater=false
build_with_tflite_lib=false

# Media and rendering features
enable_mse_mpeg2ts_stream_parser=true
enable_widevine=true
enable_swiftshader=true
ffmpeg_branding="Chrome"
proprietary_codecs=true
enable_platform_hevc=true

# Symbol configuration
blink_symbol_level=0
