# Copyright 2023 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//ui/webui/resources/tools/generate_grd.gni")

generate_grd("build") {
  grd_prefix = "ai_agent_side_panel"
  out_grd = "$target_gen_dir/resources.grd"
  
  input_files = [
    "manifest.json",
    "background.iife.js",
    "buildDomTree.js",
    "bg.jpg",
    "icon-32.png",
    "icon-128.png",
    
    # Locales
    "_locales/en/messages.json",
    
    # Content files
    "content/_content.css",
    "content/index.iife.js",
    
    # Options files
    "options/_options.css",
    "options/index.html",
    "options/assets/index-IRi2qSG8.js",
    "options/assets/index-UqCCP5ht.css",
    
    # Side panel files
    "side-panel/index.html",
    "side-panel/assets/index-B_9MwmOl.css",
    "side-panel/assets/index-DSa3grvl.js",
    
    # Side panel icons
    "side-panel/icons/navigator.svg",
    "side-panel/icons/planner.svg",
    "side-panel/icons/system.svg",
    "side-panel/icons/user.svg",
    "side-panel/icons/validator.svg",
  ]
  
  input_files_base_dir = rebase_path(".", "//")
} 